--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
 
 <ul class="submenu">
 
-<li><a href="#">Cour JavaScript</a></li>
+<li><a href="https://mahyou012.github.io/tp7/">calculatrice</a></li>
 
-<li><a href="#">Fonctions JavaScript</a></li> <li><a href="#">Le DOM</a></li>
+<li><a href="#">facture</a></li> 
+
+<li><a href="#">Le DOM</a></li>
 
 <li><a href="#">Exercices</a></li>
 
