--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <li><a href="https://mahyou012.github.io/tp7/">calculatrice</a></li>
 
-<li><a href="#">facture</a></li> 
+<li><a href="https://mahyou012.github.io/fature/">facture</a></li> 
 
 <li><a href="#">Le DOM</a></li>
 
