--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
 
 <li><a href="https://mahyou012.github.io/facture1/">facture</a></li> 
 
-<li><a href="#">Le DOM</a></li>
+<li><a href="https://mahyou012.github.io/portfolio/">menu responsive deroulant</a></li>
 
-<li><a href="#">Exercices</a></li>
+  
+
 
 </ul>
 
@@ -99,8 +100,6 @@
 
 <li><a href="https://mahyou012.github.io/bootstrap/">tp6.1</a></li>
 
-<li><a href="">tp8</a></li>
-<li><a href="">tp8.1</a></li>
 
 
 
