--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <li><a href="https://mahyou012.github.io/facture1/">facture</a></li> 
 
 <li><a href="https://mahyou012.github.io/portfolio/">menu responsive deroulant</a></li>
-
+<li><a href="#">tableau</a></li>
   
 
 
@@ -72,6 +72,9 @@
 <li><a href="https://mahyou012.github.io/cv/">mission 4</a></li>
 
 <li><a href="#">mission 5</a></li>
+<li><a href="#">mission 7</a></li>
+<li><a href="#">mission 8</a></li>
+<li><a href="#">mission 9</a></li>
 </ul>
 
 </li> <li class="menu-Certifications"> <a href="#">Certifications</a>
