--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
 <li><a href="https://mahyou012.github.io/facture1/">facture</a></li> 
 
-<li><a href="https://mahyou012.github.io/tp8.1/">bouton java sript</a></li>
-<li><a href="#">tableau</a></li>
+<li><a href="https://mahyou012.github.io/tp8/">bouton java sript</a></li>
+<li><a href="https://mahyou012.github.io/tp8.1/">tableau</a></li>
   
 
 
