--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <li><a href="https://mahyou012.github.io/cv/">mission 4</a></li>
 
 <li><a href="#">mission 5</a></li>
-<li><a href="#">mission 7</a></li>
+<li><a href="https://mahyou012.github.io/tp-7/">mission 7</a></li>
 <li><a href="#">mission 8</a></li>
 <li><a href="#">mission 9</a></li>
   
