--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <li><a href="#">Mission 5</a></li>
                     <li><a href="https://mahyou012.github.io/tp-7/">Mission 7</a></li>
                     <li><a href="https://mahyou012.github.io/mission-8/">Mission 8</a></li>
-                    <li><a href="#">Mission 9</a></li>
+                    <li><a href="https://mahyou012.github.io/mission-9/">Mission 9</a></li>
                 </ul>
             </li>
 
