--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <li><a href="https://mahyou012.github.io/mission-8/">Mission 8</a></li>
                     <li><a href="https://mahyou012.github.io/mission9.1/">Mission 9</a></li>
                     <li><a href="https://mahyou012.github.io/mission10-module-3-et-4/">Mission 10 module 3 et 4 et definition</a></li>
-                    <li><a href="#">Mission 10 module 1 et 2 et definition</a></li>
+                    <li><a href="https://mahyou012.github.io/module-1-et-2/">Mission 10 module 1 et 2 et definition</a></li>
                 </ul>
             </li>
 
