--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <li class="menu-css">
                 <a href="#">base de donnée</a>
                 <ul class="submenu">
-                    <li><a href="https://mahyou012.github.io/cinemasql/">cinema</a></li>
+                    <li><a href="#">cinema</a></li>
                 </ul>
             </li>
              <li class="menu-css">
